webpack build files fix

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,25 @@
-<!DOCTYPE html><html lang="en"><head><script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBKnz_YCcQYimWw9izGXy87IaF7953regM	&libraries=places"></script><meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no"/><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"><link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-draw/v0.16.0/mapbox-gl-draw.css"/><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta charset="utf-8"/><title>Fusion Starter</title><link href="/main.25ad3b2c4ce0ae12dc50bcba8dada004.css" rel="stylesheet"></head><body><div id="app"></div><script type="text/javascript" src="/main.cd9df2fce214d63e4b03.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<!--
+  **NOTE:** This is a template for index.html. It uses ejs and htmlWebpackPlugin to generate a different index.html for each environment. htmlWebpackPlugin will dynamically add references to the scripts and styles that it bundles to this file. The generated bundles have hash-based filenames, so it's necessary to add the references dynamically.
+  For more info on ejs, see http://www.embeddedjs.com/. For examples of using it with htmlWebpackPlugin, see https://github.com/jaketrent/html-webpack-template/blob/master/index.ejs
+  -->
+<head>
+  <!--
+    The htmlWebpackPlugin will parse the logic below so that trackJS is only added to the production version of index.html (since only webpack.config.prod.js provides the trackJS token)
+    This is an example of how to add features to index.html for only one environment.
+    To track JavaScript errors via TrackJS, sign up for a free trial at TrackJS.com and enter your token in /webpack.config.prod.js on line 55.
+   -->
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBKnz_YCcQYimWw9izGXy87IaF7953regM	&libraries=places"></script>
+  <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no"/>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-draw/v0.16.0/mapbox-gl-draw.css" type="text/css"/>
+  
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta charset="utf-8"/>
+  <title>Fusion Starter</title>
+<link href="/main.25ad3b2c4ce0ae12dc50bcba8dada004.css" rel="stylesheet"></head>
+<body>
+<div id="app"></div>
+<script type="text/javascript" src="/main.58122f37c7f9967208b1.js"></script></body>
+</html>
